// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /Button Button in desktop screen 1`] = `
<div
  className="MuiBox-root-38 MuiBox-root-39"
>
  <div
    className="MuiBox-root-38 MuiBox-root-40"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedPrimary-50"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Hower
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-61"
  >
    <button
      className="MuiButtonBase-root-58 MuiButtonBase-disabled-59 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedPrimary-50 MuiButton-disabled-53"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-62"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedSecondary-51"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Cancel
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-63"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-text-43 MuiButton-textPrimary-44"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Back
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-38 MuiBox-root-64"
  >
    <button
      className="MuiButtonBase-root-58 MuiButton-root-41 MuiButton-contained-49 MuiButton-containedPrimary-50 MuiButton-fullWidth-57"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-42"
      >
        Full Width
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components /Button Button in phone screen 1`] = `
<div
  style={
    Object {
      "width": "425px",
    }
  }
>
  <div
    className="MuiBox-root-1 MuiBox-root-2"
  >
    <div
      className="MuiBox-root-1 MuiBox-root-3"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Hower
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-24"
    >
      <button
        className="MuiButtonBase-root-21 MuiButtonBase-disabled-22 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-disabled-16"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-25"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedSecondary-14"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Cancel
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-26"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-text-6 MuiButton-textPrimary-7"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Back
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-1 MuiBox-root-27"
    >
      <button
        className="MuiButtonBase-root-21 MuiButton-root-4 MuiButton-contained-12 MuiButton-containedPrimary-13 MuiButton-fullWidth-20"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-5"
        >
          Full Width
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components /forms SelectField 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="makeStyles-dropdown-601"
    onClick={[Function]}
  >
    <div
      className="MuiInputBase-root-605 makeStyles-root-602 makeStyles-root-604"
      onClick={[Function]}
      role="button"
    >
      <input
        autoComplete="off"
        className="MuiInputBase-input-615 makeStyles-input-603"
        name="SELECT_FIELD_ATTR"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={true}
        type="text"
        value=""
      />
    </div>
    <img
      alt="Phone Menu"
      className="makeStyles-root-621 makeStyles-noShrink-622"
      height="5"
      src="selectChevron.svg"
      width="8"
    />
  </div>
</form>
`;

exports[`Storyshots Components Hairline 1`] = `
Array [
  <div
    className="MuiBox-root-75 MuiBox-root-76"
  >
    <p
      className="MuiTypography-root-79 MuiTypography-body1-81"
    >
      Regular hairline without margin
    </p>
    <div
      className="MuiBox-root-75 MuiBox-root-109"
    />
  </div>,
  <div
    className="MuiBox-root-75 MuiBox-root-110"
  >
    <p
      className="MuiTypography-root-79 MuiTypography-body1-81"
    >
      Regular hairline with unit 1 margin
    </p>
    <div
      className="MuiBox-root-75 MuiBox-root-111"
    />
  </div>,
  <div
    className="MuiBox-root-75 MuiBox-root-112"
  >
    <p
      className="MuiTypography-root-79 MuiTypography-body1-81"
    >
      Regular hairline with unit 4 margin
    </p>
    <div
      className="MuiBox-root-75 MuiBox-root-113"
    />
  </div>,
  <div
    className="MuiBox-root-75 MuiBox-root-114"
  >
    <p
      className="MuiTypography-root-79 MuiTypography-body1-81"
    >
      Hairline with custom color
    </p>
    <div
      className="MuiBox-root-75 MuiBox-root-115"
    />
  </div>,
]
`;

exports[`Storyshots Components Images 1`] = `
<img
  alt="Iov Logo"
  className="makeStyles-root-116"
  src="iov-logo.png"
/>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root-121 MuiBox-root-122"
>
  <div
    className="MuiBox-root-121 MuiBox-root-123"
  >
    <h4
      className="MuiTypography-root-126 MuiTypography-h4-134 MuiTypography-colorPrimary-149 makeStyles-inline-124"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root-126 MuiTypography-h4-134 makeStyles-inline-124"
    >
       
      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root-121 MuiBox-root-156"
  >
    <h6
      className="MuiTypography-root-126 MuiTypography-h6-136"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root-121 MuiBox-root-157"
  />
  <div
    className="MuiBox-root-121 MuiBox-root-158"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-159"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root-164 MuiBox-root-165"
  >
    <label
      className="MuiFormControlLabel-root-166"
    >
      <span
        className="MuiSwitch-root-172"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-194 MuiIconButton-root-185 MuiPrivateSwitchBase-root-181 MuiSwitch-switchBase-173 MuiSwitch-colorPrimary-174"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-193"
          >
            <span
              className="MuiSwitch-thumb-179"
            />
            <input
              className="MuiPrivateSwitchBase-input-184 MuiSwitch-input-178"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-180"
        />
      </span>
      <span
        className="MuiTypography-root-197 MuiTypography-body1-199 MuiFormControlLabel-label-171"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root-164 MuiBox-root-227"
  >
    <label
      className="MuiFormControlLabel-root-166"
    >
      <span
        className="MuiSwitch-root-172"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-194 MuiIconButton-root-185 MuiPrivateSwitchBase-root-181 MuiSwitch-switchBase-173 MuiSwitch-colorPrimary-174"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-193"
          >
            <span
              className="MuiSwitch-thumb-179"
            />
            <input
              className="MuiPrivateSwitchBase-input-184 MuiSwitch-input-178"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
        </span>
        <span
          className="MuiSwitch-track-180"
        />
      </span>
      <span
        className="MuiTypography-root-197 MuiTypography-body1-199 MuiFormControlLabel-label-171"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Toasts 1`] = `
Array [
  <div
    className="MuiBox-root-321 MuiBox-root-322"
  >
    <div
      className="MuiBox-root-321 MuiBox-root-323"
    >
      <div
        className="MuiBox-root-321 MuiBox-root-324"
      >
        <button
          className="MuiButtonBase-root-342 MuiButton-root-325 MuiButton-contained-333 MuiButton-containedPrimary-334"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-326"
          >
            Click to generate INFO toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-347 MuiTypography-body1-349"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-347 MuiTypography-body2-348 MuiPaper-root-388 MuiPaper-elevation6-396 MuiSnackbarContent-root-385 makeStyles-info-379"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-386"
        >
          <div
            className="MuiBox-root-321 MuiBox-root-415 makeStyles-message-383"
          >
            <div
              className="makeStyles-iconBackground-384"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-416"
                height={24}
                src="success.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-347 MuiTypography-subtitle1-358 makeStyles-info-379"
            >
              Hi INFO
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-387"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-342 MuiIconButton-root-421 MuiIconButton-colorSecondary-426"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-429"
            >
              <img
                alt="Close"
                className="makeStyles-root-416"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-321 MuiBox-root-430"
    >
      <div
        className="MuiBox-root-321 MuiBox-root-431"
      >
        <button
          className="MuiButtonBase-root-342 MuiButton-root-325 MuiButton-contained-333 MuiButton-containedPrimary-334"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-326"
          >
            Click to generate WARN toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-347 MuiTypography-body1-349"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-347 MuiTypography-body2-348 MuiPaper-root-388 MuiPaper-elevation6-396 MuiSnackbarContent-root-385 makeStyles-warning-380"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-386"
        >
          <div
            className="MuiBox-root-321 MuiBox-root-432 makeStyles-message-383"
          >
            <div
              className="makeStyles-iconBackground-384"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-416"
                height={24}
                src="warning.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-347 MuiTypography-subtitle1-358 makeStyles-warning-380"
            >
              Hi WARN
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-387"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-342 MuiIconButton-root-421 MuiIconButton-colorSecondary-426"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-429"
            >
              <img
                alt="Close"
                className="makeStyles-root-416"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-321 MuiBox-root-433"
    >
      <div
        className="MuiBox-root-321 MuiBox-root-434"
      >
        <button
          className="MuiButtonBase-root-342 MuiButton-root-325 MuiButton-contained-333 MuiButton-containedPrimary-334"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-326"
          >
            Click to generate ERROR toast
          </span>
        </button>
      </div>
      <p
        className="MuiTypography-root-347 MuiTypography-body1-349"
      >
        This should generate...
      </p>
      <div
        className="MuiTypography-root-347 MuiTypography-body2-348 MuiPaper-root-388 MuiPaper-elevation6-396 MuiSnackbarContent-root-385 makeStyles-error-378"
        role="alertdialog"
      >
        <div
          className="MuiSnackbarContent-message-386"
        >
          <div
            className="MuiBox-root-321 MuiBox-root-435 makeStyles-message-383"
          >
            <div
              className="makeStyles-iconBackground-384"
            >
              <img
                alt="Toast icon"
                className="makeStyles-root-416"
                height={24}
                src="error.svg"
                width={24}
              />
            </div>
            <h6
              className="MuiTypography-root-347 MuiTypography-subtitle1-358 makeStyles-error-378"
            >
              Hi ERR
            </h6>
          </div>
        </div>
        <div
          className="MuiSnackbarContent-action-387"
        >
          <button
            aria-label="Close"
            className="MuiButtonBase-root-342 MuiIconButton-root-421 MuiIconButton-colorSecondary-426"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-429"
            >
              <img
                alt="Close"
                className="makeStyles-root-416"
                height={20}
                src="close.svg"
                width={20}
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  " ",
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root-238 MuiBox-root-239"
  >
    <div
      className="makeStyles-container-241"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-244"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root-238 MuiBox-root-249"
  >
    <p
      className="MuiTypography-root-252 MuiTypography-body1-254 makeStyles-inline-250"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-241"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-244"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root-284 MuiTypography-subtitle1-295 MuiTypography-colorPrimary-307"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-284 MuiTypography-h4-292"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-284 MuiTypography-subtitle1-295 MuiTypography-colorPrimary-307"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-284 MuiTypography-h5-293"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-284 MuiTypography-subtitle1-295 MuiTypography-colorPrimary-307"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-284 MuiTypography-h6-294"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-284 MuiTypography-subtitle1-295 MuiTypography-colorPrimary-307"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-284 MuiTypography-body1-286"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-284 MuiTypography-subtitle1-295 MuiTypography-colorPrimary-307"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-284 MuiTypography-body2-285"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-284 MuiTypography-subtitle1-295 MuiTypography-colorPrimary-307"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-284 MuiTypography-subtitle1-295"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-284 MuiTypography-subtitle1-295 MuiTypography-colorPrimary-307"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-284 MuiTypography-subtitle2-296"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-284 MuiTypography-subtitle1-295 MuiTypography-colorPrimary-307"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-284 MuiTypography-subtitle2-296 MuiTypography-colorPrimary-307 makeStyles-inline-282"
  >
    First part of the text. 
  </h6>,
  <h6
    className="MuiTypography-root-284 MuiTypography-subtitle2-296 makeStyles-inline-282"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Components/forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-447 MuiFormControl-marginNormal-448 MuiTextField-root-446"
  >
    <label
      className="MuiFormLabel-root-463 MuiInputLabel-root-451 MuiInputLabel-formControl-457 MuiInputLabel-animated-460 MuiInputLabel-shrink-459"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-483 MuiOutlinedInput-root-470 MuiInputBase-formControl-484"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-499 MuiOutlinedInput-notchedOutline-477"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-500"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-493 MuiOutlinedInput-input-478"
        disabled={false}
        name="textFieldUniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <div
    className="MuiBox-root-501 MuiBox-root-502"
  >
    <div
      className="makeStyles-dropdown-503"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root-483 makeStyles-root-504 makeStyles-root-506"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input-493 makeStyles-input-505"
          name="selectFieldUniqueIdentifier"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-507 makeStyles-noShrink-508"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-529 MuiButtonBase-disabled-530 MuiButton-root-512 MuiButton-contained-520 MuiButton-containedPrimary-521 MuiButton-disabled-524"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-513"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components/forms TextFieldForm 1`] = `
<div
  className="MuiBox-root-532 MuiBox-root-533"
>
  <div
    className="MuiBox-root-532 MuiBox-root-534"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-536 MuiFormControl-marginNormal-537 MuiTextField-root-535"
      >
        <label
          className="MuiFormLabel-root-552 MuiFormLabel-error-555 MuiInputLabel-error-543 MuiInputLabel-root-540 MuiInputLabel-formControl-546 MuiInputLabel-animated-549 MuiInputLabel-shrink-548"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-572 MuiOutlinedInput-root-559 MuiInputBase-error-578 MuiOutlinedInput-error-564 MuiInputBase-formControl-573"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-588 MuiOutlinedInput-notchedOutline-566"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-589"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-582 MuiOutlinedInput-input-567"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-590 MuiFormHelperText-contained-594 MuiFormHelperText-error-591"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-532 MuiBox-root-598"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-536 MuiFormControl-marginNormal-537 MuiTextField-root-535"
      >
        <label
          className="MuiFormLabel-root-552 MuiInputLabel-root-540 MuiInputLabel-formControl-546 MuiInputLabel-animated-549 MuiInputLabel-shrink-548"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-572 MuiOutlinedInput-root-559 MuiInputBase-formControl-573"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-588 MuiOutlinedInput-notchedOutline-566"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-589"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-582 MuiOutlinedInput-input-567"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-532 MuiBox-root-599"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-536 MuiFormControl-marginNormal-537 MuiTextField-root-535"
      >
        <label
          className="MuiFormLabel-root-552 MuiFormLabel-disabled-554 MuiInputLabel-disabled-542 MuiInputLabel-root-540 MuiInputLabel-formControl-546 MuiInputLabel-animated-549 MuiInputLabel-shrink-548"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-572 MuiOutlinedInput-root-559 MuiInputBase-disabled-575 MuiOutlinedInput-disabled-561 MuiInputBase-formControl-573"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-588 MuiOutlinedInput-notchedOutline-566"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-589"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-582 MuiOutlinedInput-input-567 MuiInputBase-disabled-575 MuiOutlinedInput-disabled-561"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-532 MuiBox-root-600"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-536 MuiFormControl-marginNormal-537 MuiTextField-root-535"
      >
        <label
          className="MuiFormLabel-root-552 MuiInputLabel-root-540 MuiInputLabel-formControl-546 MuiInputLabel-animated-549 MuiInputLabel-shrink-548"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-572 MuiOutlinedInput-root-559 MuiInputBase-formControl-573"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-588 MuiOutlinedInput-notchedOutline-566"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-589"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-582 MuiOutlinedInput-input-567"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Routes/Account Show account status 1`] = `
<div
  className="MuiBox-root-626 MuiBox-root-627"
  id="/signup_first"
>
  <h4
    className="MuiTypography-root-630 MuiTypography-h4-638 MuiTypography-colorPrimary-653 makeStyles-inline-628"
  >
    New
  </h4>
  <h4
    className="MuiTypography-root-630 MuiTypography-h4-638 makeStyles-inline-628"
  >
     Account
  </h4>
  <div
    className="MuiBox-root-626 MuiBox-root-660"
  />
  <form
    onSubmit={[Function]}
  >
    <div
      className="makeStyles-dropdown-661"
      onClick={[Function]}
    >
      <div
        className="MuiInputBase-root-665 makeStyles-root-662 makeStyles-root-664"
        onClick={[Function]}
        role="button"
      >
        <input
          autoComplete="off"
          className="MuiInputBase-input-675 makeStyles-input-663"
          name="SELECT_FIELD_ATTR"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </div>
      <img
        alt="Phone Menu"
        className="makeStyles-root-681 makeStyles-noShrink-682"
        height="5"
        src="selectChevron.svg"
        width="8"
      />
    </div>
  </form>
  <div
    className="MuiBox-root-626 MuiBox-root-686"
  />
  <div
    className="MuiBox-root-626 MuiBox-root-687"
  >
    <div
      className="MuiBox-root-626 MuiBox-root-688"
    >
      This is the block where we show accounts and bns name
    </div>
    <div
      className="MuiBox-root-626 MuiBox-root-689"
    >
      This is the block where we show balances
    </div>
    <div
      className="MuiBox-root-626 MuiBox-root-690"
    >
      This is the block where we show QR Code
    </div>
    <div
      className="MuiBox-root-626 MuiBox-root-691"
    >
      This is the block where we show links
    </div>
  </div>
  <div
    className="MuiBox-root-626 MuiBox-root-692"
  />
  <div
    className="MuiBox-root-626 MuiBox-root-693"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-681"
      src="iov-logo.png"
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Login Login page 1`] = `
<div
  className="MuiBox-root-694 MuiBox-root-695"
  id="/login"
>
  <div
    className="MuiBox-root-694 MuiBox-root-696"
  >
    <h4
      className="MuiTypography-root-699 MuiTypography-h4-707 MuiTypography-colorPrimary-722 makeStyles-inline-697"
    >
      Log
    </h4>
    <h4
      className="MuiTypography-root-699 MuiTypography-h4-707 makeStyles-inline-697"
    >
       
      In
    </h4>
  </div>
  <div
    className="MuiBox-root-694 MuiBox-root-729"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-694 MuiBox-root-730"
      >
        <div
          className="MuiFormControl-root-732 MuiFormControl-marginNormal-733 MuiFormControl-fullWidth-735 MuiTextField-root-731"
        >
          <div
            className="MuiInputBase-root-749 MuiOutlinedInput-root-736 MuiInputBase-fullWidth-758 MuiInputBase-formControl-750"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-765 MuiOutlinedInput-notchedOutline-743"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-766"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-759 MuiOutlinedInput-input-744"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-694 MuiBox-root-767"
      >
        <div
          className="MuiBox-root-694 MuiBox-root-768"
        >
          <button
            className="MuiButtonBase-root-786 MuiButtonBase-disabled-787 MuiButton-root-769 MuiButton-contained-777 MuiButton-containedPrimary-778 MuiButton-disabled-781 MuiButton-fullWidth-785"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-770"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
    <div
      className="MuiBox-root-694 MuiBox-root-789"
    >
      <div
        className="MuiBox-root-694 MuiBox-root-790"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-699 MuiTypography-subtitle2-711 MuiTypography-colorPrimary-722 makeStyles-inline-697 makeStyles-link-698"
          >
            Restore account
          </h6>
        </a>
      </div>
      <div
        className="MuiBox-root-694 MuiBox-root-791"
      >
        <a
          href="/welcome"
          onClick={[Function]}
        >
          <h6
            className="MuiTypography-root-699 MuiTypography-subtitle2-711 MuiTypography-colorPrimary-722 makeStyles-inline-697 makeStyles-link-698"
          >
            More options
          </h6>
        </a>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-694 MuiBox-root-792"
  />
  <div
    className="MuiBox-root-694 MuiBox-root-793"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-794"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Recovery phrase Main 1`] = `
<div
  className="MuiBox-root-799 MuiBox-root-800"
  id="/recovery-phrase"
>
  <div
    className="MuiBox-root-799 MuiBox-root-801"
  >
    <h4
      className="MuiTypography-root-804 MuiTypography-h4-812 MuiTypography-colorPrimary-827 makeStyles-inline-802"
    >
      Recovery
    </h4>
    <h4
      className="MuiTypography-root-804 MuiTypography-h4-812 makeStyles-inline-802"
    >
       
      phrase
    </h4>
  </div>
  <div
    className="MuiBox-root-799 MuiBox-root-834"
  >
    <div
      className="MuiBox-root-799 MuiBox-root-835"
    >
      <div
        className="MuiBox-root-799 MuiBox-root-836"
      >
        <div
          className="MuiBox-root-799 MuiBox-root-837"
        >
          <h6
            className="MuiTypography-root-804 MuiTypography-subtitle2-816 makeStyles-inline-802"
          >
            Your Recovery Phrase are 12 random words that are set in a particular order that acts as a tool to recover or back up your wallet on any platform.
          </h6>
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root-799 MuiBox-root-838"
    >
      <h6
        className="MuiTypography-root-804 MuiTypography-subtitle2-816 MuiTypography-colorPrimary-827 makeStyles-inline-802"
      >
        Get PDF button placement
      </h6>
    </div>
    <div
      className="MuiBox-root-799 MuiBox-root-839"
    >
      <p
        className="MuiTypography-root-804 MuiTypography-body1-806 makeStyles-inline-802"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root-799 MuiBox-root-840"
    >
      <div
        className="MuiBox-root-799 MuiBox-root-841"
      >
        <button
          className="MuiButtonBase-root-859 MuiButton-root-842 MuiButton-text-844 MuiButton-textPrimary-845 MuiButton-fullWidth-858"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-843"
          >
            Back
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-799 MuiBox-root-862"
  />
  <div
    className="MuiBox-root-799 MuiBox-root-863"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-864"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root-879 MuiBox-root-880"
  id="/signup1"
>
  <div
    className="MuiBox-root-879 MuiBox-root-881"
  >
    <h4
      className="MuiTypography-root-884 MuiTypography-h4-892 MuiTypography-colorPrimary-907 makeStyles-inline-882"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-884 MuiTypography-h4-892 makeStyles-inline-882"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-879 MuiBox-root-914"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-879 MuiBox-root-915"
      >
        <div
          className="MuiFormControl-root-917 MuiFormControl-marginNormal-918 MuiFormControl-fullWidth-920 MuiTextField-root-916"
        >
          <label
            className="MuiFormLabel-root-933 MuiFormLabel-required-938 MuiInputLabel-required-925 MuiInputLabel-root-921 MuiInputLabel-formControl-927 MuiInputLabel-animated-930 MuiInputLabel-shrink-929"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk-939 MuiInputLabel-asterisk-926"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-953 MuiOutlinedInput-root-940 MuiInputBase-fullWidth-962 MuiInputBase-formControl-954"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-969 MuiOutlinedInput-notchedOutline-947"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-970"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-963 MuiOutlinedInput-input-948"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-879 MuiBox-root-971"
      >
        <div
          className="MuiFormControl-root-917 MuiFormControl-marginNormal-918 MuiFormControl-fullWidth-920 MuiTextField-root-916"
        >
          <label
            className="MuiFormLabel-root-933 MuiFormLabel-required-938 MuiInputLabel-required-925 MuiInputLabel-root-921 MuiInputLabel-formControl-927 MuiInputLabel-animated-930 MuiInputLabel-shrink-929"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-939 MuiInputLabel-asterisk-926"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-953 MuiOutlinedInput-root-940 MuiInputBase-fullWidth-962 MuiInputBase-formControl-954"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-969 MuiOutlinedInput-notchedOutline-947"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-970"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-963 MuiOutlinedInput-input-948"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-879 MuiBox-root-972"
      >
        <div
          className="MuiFormControl-root-917 MuiFormControl-marginNormal-918 MuiFormControl-fullWidth-920 MuiTextField-root-916"
        >
          <label
            className="MuiFormLabel-root-933 MuiFormLabel-required-938 MuiInputLabel-required-925 MuiInputLabel-root-921 MuiInputLabel-formControl-927 MuiInputLabel-animated-930 MuiInputLabel-shrink-929"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-939 MuiInputLabel-asterisk-926"
            >
               
              *
            </span>
          </label>
          <div
            className="MuiInputBase-root-953 MuiOutlinedInput-root-940 MuiInputBase-fullWidth-962 MuiInputBase-formControl-954"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-969 MuiOutlinedInput-notchedOutline-947"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-970"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-963 MuiOutlinedInput-input-948"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-879 MuiBox-root-973"
      >
        <div
          className="MuiBox-root-879 MuiBox-root-974"
        >
          <button
            className="MuiButtonBase-root-992 MuiButton-root-975 MuiButton-text-977 MuiButton-textPrimary-978 MuiButton-fullWidth-991"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-976"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-879 MuiBox-root-995"
        >
          <button
            className="MuiButtonBase-root-992 MuiButtonBase-disabled-993 MuiButton-root-975 MuiButton-contained-983 MuiButton-containedPrimary-984 MuiButton-disabled-987 MuiButton-fullWidth-991"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-976"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-879 MuiBox-root-996"
  />
  <div
    className="MuiBox-root-879 MuiBox-root-997"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-998"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root-1013 MuiBox-root-1014"
  id="/signup2"
>
  <div
    className="MuiBox-root-1013 MuiBox-root-1015"
  >
    <h4
      className="MuiTypography-root-1018 MuiTypography-h4-1026 MuiTypography-colorPrimary-1041 makeStyles-inline-1016"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1018 MuiTypography-h4-1026 makeStyles-inline-1016"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1013 MuiBox-root-1048"
  >
    <div
      className="MuiBox-root-1013 MuiBox-root-1049"
    >
      <div
        className="MuiBox-root-1013 MuiBox-root-1050"
      >
        <div
          className="MuiBox-root-1013 MuiBox-root-1051"
        >
          <h6
            className="MuiTypography-root-1018 MuiTypography-subtitle2-1030 makeStyles-inline-1016"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-1053"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-1056"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root-1061"
      >
        <span
          className="MuiSwitch-root-1067"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root-1089 MuiIconButton-root-1080 MuiPrivateSwitchBase-root-1076 MuiSwitch-switchBase-1068 MuiSwitch-colorPrimary-1069"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-1088"
            >
              <span
                className="MuiSwitch-thumb-1074"
              />
              <input
                className="MuiPrivateSwitchBase-input-1079 MuiSwitch-input-1073"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
          </span>
          <span
            className="MuiSwitch-track-1075"
          />
        </span>
        <span
          className="MuiTypography-root-1018 MuiTypography-body1-1020 MuiFormControlLabel-label-1066"
        />
      </label>
    </div>
    <div
      className="MuiBox-root-1013 MuiBox-root-1092"
    >
      <p
        className="MuiTypography-root-1018 MuiTypography-body1-1020 makeStyles-inline-1016"
      >
        
      </p>
    </div>
    <div
      className="MuiBox-root-1013 MuiBox-root-1093"
    >
      <div
        className="MuiBox-root-1013 MuiBox-root-1094"
      >
        <button
          className="MuiButtonBase-root-1089 MuiButton-root-1095 MuiButton-text-1097 MuiButton-textPrimary-1098 MuiButton-fullWidth-1111"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1096"
          >
            Back
          </span>
        </button>
      </div>
      <div
        className="MuiBox-root-1013 MuiBox-root-1112"
      >
        <button
          className="MuiButtonBase-root-1089 MuiButton-root-1095 MuiButton-contained-1103 MuiButton-containedPrimary-1104 MuiButton-fullWidth-1111"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-1096"
          >
            Continue
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-1013 MuiBox-root-1113"
  />
  <div
    className="MuiBox-root-1013 MuiBox-root-1114"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1056"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root-1125 MuiBox-root-1126"
  id="/signup3"
>
  <div
    className="MuiBox-root-1125 MuiBox-root-1127"
  >
    <h4
      className="MuiTypography-root-1130 MuiTypography-h4-1138 MuiTypography-colorPrimary-1153 makeStyles-inline-1128"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-1130 MuiTypography-h4-1138 makeStyles-inline-1128"
    >
       
      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-1125 MuiBox-root-1160"
  >
    <h6
      className="MuiTypography-root-1130 MuiTypography-subtitle1-1141 makeStyles-inline-1128"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-1125 MuiBox-root-1161"
      >
        <div
          className="MuiFormControl-root-1163 MuiFormControl-marginNormal-1164 MuiFormControl-fullWidth-1166 MuiTextField-root-1162"
        >
          <div
            className="MuiInputBase-root-1180 MuiOutlinedInput-root-1167 MuiInputBase-fullWidth-1189 MuiInputBase-formControl-1181"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-1196 MuiOutlinedInput-notchedOutline-1174"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-1197"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-1190 MuiOutlinedInput-input-1175"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-1125 MuiBox-root-1198"
      >
        <div
          className="MuiBox-root-1125 MuiBox-root-1199"
        >
          <button
            className="MuiButtonBase-root-1217 MuiButton-root-1200 MuiButton-text-1202 MuiButton-textPrimary-1203 MuiButton-fullWidth-1216"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-1201"
            >
              Back
            </span>
          </button>
        </div>
        <div
          className="MuiBox-root-1125 MuiBox-root-1220"
        >
          <button
            className="MuiButtonBase-root-1217 MuiButton-root-1200 MuiButton-contained-1208 MuiButton-containedPrimary-1209 MuiButton-fullWidth-1216"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-1201"
            >
              Create
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-1125 MuiBox-root-1221"
  />
  <div
    className="MuiBox-root-1125 MuiBox-root-1222"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1223"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-1238 MuiBox-root-1239"
  id="/welcome"
>
  <div
    className="MuiBox-root-1238 MuiBox-root-1240"
  >
    <h4
      className="MuiTypography-root-1243 MuiTypography-h4-1251 MuiTypography-colorPrimary-1266 makeStyles-inline-1241"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root-1243 MuiTypography-h4-1251 makeStyles-inline-1241"
    >
       
      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root-1238 MuiBox-root-1273"
  >
    <p
      className="MuiTypography-root-1243 MuiTypography-body1-1245 makeStyles-inline-1241"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-1238 MuiBox-root-1274"
    />
    <button
      className="MuiButtonBase-root-1292 MuiButton-root-1275 MuiButton-contained-1283 MuiButton-containedPrimary-1284 MuiButton-fullWidth-1291"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1276"
      >
        Log in
      </span>
    </button>
    <div
      className="MuiBox-root-1238 MuiBox-root-1295"
    />
    <button
      className="MuiButtonBase-root-1292 MuiButton-root-1275 MuiButton-contained-1283 MuiButton-containedPrimary-1284 MuiButton-fullWidth-1291"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1276"
      >
        New account
      </span>
    </button>
    <div
      className="MuiBox-root-1238 MuiBox-root-1296"
    />
    <button
      className="MuiButtonBase-root-1292 MuiButton-root-1275 MuiButton-contained-1283 MuiButton-containedPrimary-1284 MuiButton-fullWidth-1291"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-1276"
      >
        Import account
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-1238 MuiBox-root-1297"
  />
  <div
    className="MuiBox-root-1238 MuiBox-root-1298"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-1299"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
